<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/addCanteenBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/add_canteen_btn_title"
        app:layout_constraintBottom_toTopOf="@+id/addStudentBtn"
        app:layout_constraintEnd_toStartOf="@+id/viewCanteenBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/viewCanteenBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/view_canteen_btn_title"
        app:layout_constraintBottom_toTopOf="@+id/viewStudentBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addCanteenBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/addStudentBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/add_student_btn_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewStudentBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCanteenBtn" />

    <Button
        android:id="@+id/viewStudentBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/view_student_btn_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addStudentBtn"
        app:layout_constraintTop_toBottomOf="@+id/viewCanteenBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>