<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="10dp"
    android:paddingVertical="20dp"
    tools:context=".student.StudentMenuFragment">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/placeOrderBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/place_order_btn_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/historyBtn"
        app:layout_constraintEnd_toStartOf="@+id/viewOrderBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/viewOrderBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/view_order_btn_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/placeOrderBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/historyBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:text="@string/history_btn_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/placeOrderBtn"
        app:layout_constraintStart_toStartOf="@+id/placeOrderBtn"
        app:layout_constraintTop_toBottomOf="@+id/placeOrderBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>