<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/canteen_staff">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addItemBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_item_btn_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/viewNewOrderBtn"
        app:layout_constraintEnd_toStartOf="@+id/viewItemBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/viewItemBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_item_btn_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addItemBtn"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/viewNewOrderBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_new_order_btn_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/addItemBtn"
        app:layout_constraintStart_toStartOf="@+id/addItemBtn"
        app:layout_constraintTop_toBottomOf="@+id/addItemBtn" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/logoutBtn"
            style="?attr/floatingActionButtonSecondaryStyle"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:icon="@drawable/ic_baseline_logout_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Menu"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>